Reverted to css scrolling

--- a/index-android.html
+++ b/index-android.html
@@ -9,6 +9,9 @@
     <!-- jQuery Mobile styles -->
     <link rel="stylesheet" href="scripts/libs/jquery.mobile/jquery.mobile-1.2.0.css"/>
 
+    <!-- Custom styles -->
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="all"/>
+
     <!-- Referencing iOS specific PhoneGap JS -->
     <script type="text/javascript" charset="utf-8" src="scripts/libs/cordova/cordova-android-2.1.0.js"></script>
     <script type="text/javascript" charset="utf-8" src="scripts/libs/cordova/ChildBrowser-android.js"></script>
@@ -17,5 +20,6 @@
 
 </head>
 <body>
+<div id="container"/>
 </body>
 </html>
